<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_padding"
    tools:context=".EditorActivity">
    <!-- Product name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/half_margin_padding">
        <!-- Label for the name category -->
        <TextView
            android:text="@string/category_name"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_size"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/quarter_margin_padding">
            <!-- Product name EditText field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditTextStyle" />
        </LinearLayout>
    </LinearLayout>
    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/half_margin_padding">
        <!-- Label for the price category -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_size"
            android:layout_weight="2"
            android:paddingLeft="@dimen/quarter_margin_padding">
            <!-- Product price EditText field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_price"
                android:inputType="number"
                style="@style/EditTextStyle"
                android:textAlignment="center"
                />
            <!-- Price currency TextView field -->
            <TextView
                android:id="@+id/price_currency"
                android:text="@string/price_currency"
                style="@style/EditUnitsStyle" />
        </RelativeLayout>
    </LinearLayout>
    <!-- Quantity category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/half_margin_padding">
        <!-- Label for the quantity category -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_size"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/quarter_margin_padding">
            <!-- Button for decrementing the quantity -->
            <Button
                android:id="@+id/decrement"
                android:layout_width="@dimen/zero_size"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/decrement_button"/>
            <!-- Product quantity EditText field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="@dimen/zero_size"
                android:layout_weight="1"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                style="@style/EditTextStyle"
                android:textAlignment="center"/>
            <!-- Button for incrementing the quantity -->
            <Button
                android:id="@+id/increment"
                android:layout_width="@dimen/zero_size"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/increment_button" />
        </LinearLayout>
    </LinearLayout>
    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label for the Supplier category -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />
        <!-- Input fields for the supplier info -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="@dimen/zero_size"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/quarter_margin_padding">
            <!-- Supplier name EditText field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditTextStyle" />
            <!-- Supplier phone EditText field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                style="@style/EditTextStyle" />
            <!-- Button for calling the supplier -->
            <Button
                android:id="@+id/call_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_button"
                android:drawableLeft="@drawable/ic_call"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>